--- a/page1.html
+++ b/page1.html
@@ -35,10 +35,25 @@
 <!-- Main content -->
 <div class="box">
 
+reCAPTCHA v2
+"I'm not a robot" tickbox
 
   
 </div>
 
+<html>
+  <head>
+    <title>reCAPTCHA demo: Simple page</title>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  </head>
+  <body>
+    <form action="?" method="POST">
+      <div class="g-recaptcha" data-sitekey="6LfGu4QkAAAAABGWbNHGy5VabI04KsVR_bZjnyYG"></div>
+      <br/>
+      <input type="submit" value="Submit">
+    </form>
+  </body>
+</html>
 
 
 
