add page3 placeholder android
add page3 placeholder android

--- a/page3.html
+++ b/page3.html
@@ -32,12 +32,18 @@
 
 
 
-<!-- Main content -->
+<!-- Main content 
+
+-->
+
 <div class="box">
 
 reCAPTCHA v2
 reCAPTCHA Android
-  
+
+package
+com.android.reCAPTCHA.schmeelk.github.io
+
 </div>
 
 
