--- a/page1.html
+++ b/page1.html
@@ -48,7 +48,7 @@ reCAPTCHA v2
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   </head>
   <body>
-    <form action="?" method="POST">
+    <form action="https://schmeelk.github.io/usabilitytesting/page1.html" method="POST">
       <div class="g-recaptcha" data-sitekey="6LfGu4QkAAAAABGWbNHGy5VabI04KsVR_bZjnyYG"></div>
       <br/>
       <input type="submit" value="Submit">
