Add reCAPTCHA site key
Add reCAPTCHA site key

--- a/page4.html
+++ b/page4.html
@@ -48,7 +48,7 @@ reCAPTCHA v3
       function onClick(e) {
         e.preventDefault();
         grecaptcha.ready(function() {
-          grecaptcha.execute('reCAPTCHA_site_key', {action: 'submit'}).then(function(token) {
+          grecaptcha.execute('6LdNF4UkAAAAAAmwGg6_qVT-6f7V081LyVDAZ_FU', {action: 'submit'}).then(function(token) {
               // Add your logic to submit to your backend server here.
           });
         });
