console.log updates
console.log updates

--- a/page2.html
+++ b/page2.html
@@ -72,7 +72,7 @@ Invisible reCAPTCHA badge
     <title>reCAPTCHA demo: Explicit render after an onload callback</title>
     <script>
         var onSubmit = function(token) {
-          console.log('success!');
+          console.log('success page2!');
         };
 
         var onloadCallback = function() {
