--- a/page4.html
+++ b/page4.html
@@ -42,6 +42,7 @@ reCAPTCHA v3
   
 </div>
 
+<html>
 <script src="https://www.google.com/recaptcha/api.js?render=6LdNF4UkAAAAAAmwGg6_qVT-6f7V081LyVDAZ_FU"></script>
 
  <script>
@@ -50,11 +51,12 @@ reCAPTCHA v3
         grecaptcha.ready(function() {
           grecaptcha.execute('6LdNF4UkAAAAAAmwGg6_qVT-6f7V081LyVDAZ_FU', {action: 'submit'}).then(function(token) {
               // Add your logic to submit to your backend server here.
+			  console.log('success page4!');
           });
         });
       }
   </script>
-
+</html>
 
 
 
