--- a/page4.html
+++ b/page4.html
@@ -44,25 +44,28 @@ reCAPTCHA v3
 
 <html>
   <head>
-<script src="https://www.google.com/recaptcha/api.js?render=6LdNF4UkAAAAAAmwGg6_qVT-6f7V081LyVDAZ_FU"></script>
+     <script src="https://www.google.com/recaptcha/api.js"></script>
   </head>
   
     <body>
 	
-	<button onclick="onClick()"> Submit </button>
 	
- <script>
-      function onClick(e) {
-        e.preventDefault();
-        grecaptcha.ready(function() {
-          grecaptcha.execute('6LdNF4UkAAAAAAmwGg6_qVT-6f7V081LyVDAZ_FU', {action: 'submit'}).then(function(token) {
-              // Add your logic to submit to your backend server here.
-			  console.log(token);
-			  console.log('success page4!');
-          });
-        });
+	 <script>
+       function onSubmit(token) {
+        document.getElementById("demo-form").submit();
       }
-  </script>
+    </script>
+
+    <form id="demo-form" action="?" method="POST">
+
+	<button class="g-recaptcha" 
+        data-sitekey="6LdNF4UkAAAAAAmwGg6_qVT-6f7V081LyVDAZ_FU" 
+        data-callback='onSubmit' 
+        data-action='submit'>Submit</button>
+
+    </form>
+
+
     <body>
 </html>
 
