--- a/page5.html
+++ b/page5.html
@@ -39,12 +39,14 @@ https://www.jotform.com/blog/how-to-add-captcha-to-google-forms/
 
 Google Form with Math Equation to vet any audio settings
 
+<a href="https://docs.google.com/forms/d/e/1FAIpQLServieJ0BEMO5HrH16PhJffqQkMwoMiFRIrBze2KPintaw9hg/viewform?usp=sf_link" target="_blank">Link to Google Form</a>
+
+
   
 </div>
 
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLServieJ0BEMO5HrH16PhJffqQkMwoMiFRIrBze2KPintaw9hg/viewform?embedded=true" width="640" height="462" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
-</div>
 
 <!-- &hellip; gives you ... -->
 <address> 
