Adding first table

--- a/page7.html
+++ b/page7.html
@@ -55,6 +55,36 @@ Graig Sauer, Jonathan Lazar, Harry Hochheiser, and Jinjuan Feng. 2010. Towards A
   
 </div>
 
+<--Images: GitHub\usabilitytesting\media\captcha-images\public-domain-www.publicdomainpictures.net\
+Sounds: GitHub\usabilitytesting\media\captcha-sounds\
+
+
+Figure 1:
+
+Table:-->
+
+<table>
+  <tr>
+    <td>Random Image 1</td>
+    <td> Button Play Sound</td>
+  </tr>
+  <tr>
+    <td>Dropdown list of items</td>
+    <td> Button Submit</td>
+  </tr>
+</table> 
+
+<--
+Javascript
+1.	Select image at random from set
+2.	Ensure image file name on list
+3.	Button Play: play sound file with matching image file name when clicked
+4.	Button Submit: validate selected dropdown list name matches sound file name
+
+
+Figure 2:
+-->
+
 
 
 
