--- a/page7.html
+++ b/page7.html
@@ -55,7 +55,7 @@ Graig Sauer, Jonathan Lazar, Harry Hochheiser, and Jinjuan Feng. 2010. Towards A
   
 </div>
 
-<--Images: GitHub\usabilitytesting\media\captcha-images\public-domain-www.publicdomainpictures.net\
+<!--Images: GitHub\usabilitytesting\media\captcha-images\public-domain-www.publicdomainpictures.net\
 Sounds: GitHub\usabilitytesting\media\captcha-sounds\
 
 
