--- a/page7.html
+++ b/page7.html
@@ -66,11 +66,11 @@ Table:-->
 <table>
   <tr>
     <td>Random Image 1</td>
-    <td> Button Play Sound</td>
+    <td> <button>Button Play Sound</button></td>
   </tr>
   <tr>
     <td>Dropdown list of items</td>
-    <td> Button Submit</td>
+    <td> <button>Button Submit</button></td>
   </tr>
 </table> 
 
