--- a/page7.html
+++ b/page7.html
@@ -54,25 +54,7 @@ Table:-->
 <table>
   <tr>
     <td>
-	
-	<script>
-
-			const image_array = [
-			   'bird.jpg',
-                'cat.jpg',
-                'fireworks.jpg'
-			];
-
-			function get_random_image() {
-			  const random_index = Math.floor(Math.random() * image_array.length);
-			  const selected_image = image_array[random_index];
-			  console.log( selected_image )
-			  document.getElementById('image_shower').src = `./media/captcha-images/public-domain-www.publicdomainpictures.net/${selected_image}`;
-			}
-
-        </script>
-	
-	
+    <img src="./media/captcha-images/public-domain-www.publicdomainpictures.net/cat.jpg" width="105" height="112" id="myPicture" alt="some image">
 	</td>
     <td> <button>Button Play Sound</button></td>
   </tr>
