--- a/page7.html
+++ b/page7.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Usability Testing</title>
+  <script src="page7script.js"></script>
   <link rel="stylesheet" href="./ut.css">
   <meta name="title" content="Usability Testing"/>
   <meta name="Keywords" content=""/>
