--- a/page7.html
+++ b/page7.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
 <head>
-  <title>Usability Testing</title>
-  <script src="page7script.js"></script>
+  <title>Usability Testing</title>  
   <link rel="stylesheet" href="./ut.css">
   <meta name="title" content="Usability Testing"/>
   <meta name="Keywords" content=""/>
   <meta name="Description" content=""/>
+  
+  <script src="./page7script.js"></script>
+	
 </head>
 
 
@@ -55,7 +57,7 @@ Table:-->
 <table>
   <tr>
     <td>
-    <img src="./media/captcha-images/public-domain-www.publicdomainpictures.net/cat.jpg" width="105" height="112" id="myPicture" alt="some image">
+    <img src="./media/captcha-images/public-domain-www.publicdomainpictures.net/cat.jpg" width="10" height="10" id="myPicture" alt="some image">
 	</td>
     <td> <button>Button Play Sound</button></td>
   </tr>
