--- a/page7.html
+++ b/page7.html
@@ -59,7 +59,10 @@ Table:-->
     <td>
     <img src="./media/captcha-images/public-domain-www.publicdomainpictures.net/cat.jpg" width="10" height="10" id="myPicture" alt="some image">
 	</td>
-    <td> <button>Button Play Sound</button></td>
+    <td> 
+	    <button>Button Play Sound</button>
+	    <script src="./page7script.js"></script>
+	</td>
   </tr>
   <tr>
     <td>Dropdown list of items</td>
