--- a/page7.html
+++ b/page7.html
@@ -57,16 +57,15 @@ Table:-->
 <table>
   <tr>
     <td>
-    <img src="./media/captcha-images/public-domain-www.publicdomainpictures.net/cat.jpg" width="10" height="10" id="myPicture" alt="some image">
+    <img src="./media/captcha-images/public-domain-www.publicdomainpictures.net/cat.jpg" width="200" height="200" id="myPicture" alt="some image">
 	</td>
     <td> 
-	    <button>Button Play Sound</button>
-	    <script src="./page7script.js"></script>
+	    <button onclick="onPlaySoundButtonClick()">Button Play Sound</button>
 	</td>
   </tr>
   <tr>
     <td>Dropdown list of items</td>
-    <td> <button>Button Submit</button></td>
+    <td> <button onclick="onSubmitButtonClick()">Button Submit</button></td>
   </tr>
 </table> 
 
