--- a/page7.html
+++ b/page7.html
@@ -57,7 +57,7 @@ Table:-->
 <table>
   <tr>
     <td>
-    <img src="./media/captcha-images/public-domain-www.publicdomainpictures.net/cat.jpg" width="200" height="200" id="myPicture" alt="some image">
+    <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="myPicture" alt="some image">
 	</td>
     <td> 
 	    <button onclick="onPlaySoundButtonClick()">Button Play Sound</button>
