--- a/page7.html
+++ b/page7.html
@@ -25,6 +25,32 @@ function favTutorial() {
 var mylist = document.getElementById("myList");  
 document.getElementById("favourite").value = mylist.options[mylist.selectedIndex].text;  
 }  
+
+function onPlaySoundButtonClick() {
+  alert('Button Play Sound clicked!');
+}
+
+function onSubmitButtonClick() {
+  alert('Button Submit clicked!');
+}
+
+const button = document.querySelector('button');
+button.addEventListener('click', onButtonClick);
+
+
+window.onload = choosePic;
+
+var myPix = new Array(
+		"bird.jpg",
+        "cat.jpg",
+        "fireworks.jpg"
+		);
+
+function choosePic() {
+     var randomNum = Math.floor(Math.random() * myPix.length);
+	 var selected_image = imyPix[random_index];
+     document.getElementById("myPicture").src =  `./media/captcha-images/public-domain-www.publicdomainpictures.net/${selected_image}`;
+	 
 </script>  
 
 
@@ -69,14 +95,12 @@ Table:-->
 	</td>
   </tr>
   <tr>
-    <td>Dropdown list of items
-	
+    <td>
 		<select id = "myList" onchange = "favTutorial()" >  
-		<option> ---Choose tutorial--- </option>  
-		<option> w3schools </option>  
-		<option> Javatpoint </option>  
-		<option> tutorialspoint </option>  
-		<option> geeksforgeeks </option>  
+		<option> bird </option>  
+		<option> cat </option>  
+		<option> fireworks </option>  
+		<option> dog </option>  
 		</select>  
 	
 	</td>
