--- a/page7.html
+++ b/page7.html
@@ -58,7 +58,7 @@ Table:-->
     <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="myPicture" alt="some image">
 	</td>
     <td> 
-	    <button onclick="onPlaySoundButtonClick()">Button Play Sound</button>
+	    <button class="play-button"> Button Play Sound</button>
 	</td>
   </tr>
   <tr>
@@ -71,7 +71,7 @@ Table:-->
 		</select>  
 	
 	</td>
-    <td> <button onclick="onSubmitButtonClick()">Button Submit</button></td>
+    <td> <button class="submit-button"> Button Submit</button></td>
   </tr>
 </table> 
 
