working on drop down list

--- a/page7.html
+++ b/page7.html
@@ -63,7 +63,7 @@ Table:-->
   </tr>
   <tr>
     <td>
-		<select id = "myList" onchange = "favTutorial()" >  
+		<select id = "choiceList">  
 		<option> bird </option>  
 		<option> cat </option>  
 		<option> fireworks </option>  
