--- a/page7.html
+++ b/page7.html
@@ -112,7 +112,7 @@ Figure 2:
 
 <script src="./page7script.js"></script>
 
- <script src="/__/firebase/5.5.7/firebase-app.js"></script>
+ <!--<script src="/__/firebase/5.5.7/firebase-app.js"></script>
  <script src="/__/firebase/5.5.7/firebase-auth.js"></script>
  <script src="/__/firebase/5.5.7/firebase-database.js"></script>
 
@@ -120,8 +120,8 @@ Figure 2:
     https://firebase.google.com/docs/web/setup#reserved-urls -->
 
     <!-- Initialize Firebase -->
- <script src="/__/firebase/init.js"></script>
-	
+<!-- <script src="/__/firebase/init.js"></script>
+-->	
 
 </body>
 </html>
