--- a/page7.html
+++ b/page7.html
@@ -101,7 +101,9 @@ Figure 2:
    <!-- This script and many more are available free online at -->
    <!-- The JavaScript Source!! http://javascript.internet.com -->
    document.write("Updated: " + document.lastModified)
-  </SCRIPT></h4>
+  </SCRIPT>
+  </h4>
+  <button class="export-csv"> Export CSV</button>
  </td>
  <td>
  </td>
