--- a/page7.html
+++ b/page7.html
@@ -103,7 +103,7 @@ Figure 2:
    document.write("Updated: " + document.lastModified)
   </SCRIPT>
   </h4>
-  <button class="export-csv"> Export CSV</button>
+  <a href="#"> <button class="export-csv"> Export CSV</button> </a>
  </td>
  <td>
  </td>
