--- a/page9.html
+++ b/page9.html
@@ -41,7 +41,41 @@ Kuppusamy, K.S., Aghila, G. HuMan: an accessible, polymorphic and personalized C
   
 </div>
 
-
+<table>
+  <tr>
+    <td>
+    <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td11" alt="some image">
+	</td>
+    <td>
+    <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td12" alt="some image">
+	</td>
+	 <td>
+    <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td13" alt="some image">
+	</td>
+  </tr>
+  
+  <tr>
+   <td>
+    <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td21" alt="some image">
+	</td>
+    <td>
+    <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td22" alt="some image">
+	</td>
+	 <td>
+    <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td23" alt="some image">
+	</td>
+   <tr> 
+   
+   
+   <td>
+   </td>
+      <td> 
+	    <button class="play-button"> Button Play Sound</button>
+	</td>
+	</td>
+    <td> <button class="submit-button"> Button Submit</button></td>
+	  </tr>
+</table> 
 
 
 <!-- &hellip; gives you ... -->
