--- a/page9.html
+++ b/page9.html
@@ -32,24 +32,28 @@ Kuppusamy, K.S., Aghila, G. HuMan: an accessible, polymorphic and personalized C
 <table>
   <tr>
     <td>
-    <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td11" alt="some image">
-	</td>
+	<button id="td11"></button>
     <td>
+	<button id="td12"></button>
     <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td12" alt="some image">
 	</td>
 	 <td>
+	 <button id="td13"></button>
     <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td13" alt="some image">
 	</td>
   </tr>
   
   <tr>
    <td>
+    <button id="td21"></button>
     <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td21" alt="some image">
 	</td>
     <td>
+	<button id="td22"></button>
     <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td22" alt="some image">
 	</td>
 	 <td>
+	 <button id="td23"></button>
     <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td23" alt="some image">
 	</td>
    <tr> 
