--- a/page9.html
+++ b/page9.html
@@ -33,6 +33,8 @@ Kuppusamy, K.S., Aghila, G. HuMan: an accessible, polymorphic and personalized C
   <tr>
     <td>
 	<button id="td11"></button>
+    <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td11img" alt="some image">
+	</td>
     <td>
 	<button id="td12"></button>
     <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td12" alt="some image">
