--- a/page1.html
+++ b/page1.html
@@ -49,7 +49,7 @@ reCAPTCHA v2
   </head>
   <body>
     <form action="https://schmeelk.github.io/usabilitytesting/page1.html" method="POST">
-      <div class="g-recaptcha" data-sitekey="6LfGu4QkAAAAABGWbNHGy5VabI04KsVR_bZjnyYG"></div>
+      <div class="g-recaptcha" data-sitekey="6LfGu4QkAAAAABGWbNHGy5VabI04KsVR_bZjnyYG" data-callback="onSuccessReCaptcha" ></div>
       <br/>
       <input type="submit" value="Submit">
     </form>
@@ -79,6 +79,15 @@ reCAPTCHA v2
 </table>
 
 </address>
+
+<script LANGUAGE="JavaScript"> 
+
+function onSuccessReCaptcha(event){
+  alert('Confirming we are in here!');
+}
+
+</script>
+
 </body>
 </html>
 
