--- a/page1.html
+++ b/page1.html
@@ -51,7 +51,7 @@ reCAPTCHA v2
     <!-- <form action="https://schmeelk.github.io/usabilitytesting/page1.html" method="GET"> -->
       <div class="g-recaptcha" data-sitekey="6LfGu4QkAAAAABGWbNHGy5VabI04KsVR_bZjnyYG" data-callback="onSuccessReCaptcha" ></div>
       <br/>
-      <input type="submit" value="Submit">
+      <!-- <input type="submit" value="Submit"> -->
     <!-- </form> -->
   </body>
 </html>
