changing images -pg9
changing images

--- a/page9.html
+++ b/page9.html
@@ -33,7 +33,7 @@ Kuppusamy, K.S., Aghila, G. HuMan: an accessible, polymorphic and personalized C
   <tr>
     <td>
 	<button id="td11">
-    <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td11img" alt="some image"> </button>
+    <img id='td11image' src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td11img" alt="some image"> </button>
 	</td>
     <td>
 	<button id="td12">
