formatting and alignment

--- a/page9.html
+++ b/page9.html
@@ -1,100 +1,83 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
-<head>
-  <title>Usability Testing</title>
-  <link rel="stylesheet" href="./ut.css">
-  <meta name="title" content="Usability Testing"/>
-  <meta name="Keywords" content=""/>
-  <meta name="Description" content=""/>
-</head>
-
-
-<body>
-
-<!-- Site navigation menu -->
-<ul class="navbar">
-  <li><a href="index.html">Home</a></li>
-</ul>
-
-
-
-
-
-<!-- Main content 
-https://www.jotform.com/blog/how-to-add-captcha-to-google-forms/
--->
-<div class="box">
-
-Kuppusamy, K.S., Aghila, G. HuMan: an accessible, polymorphic and personalized CAPTCHA interface with preemption feature tailored for persons with visual impairments. Univ Access Inf Soc 17, 841–864 (2018). https://doi.org/10.1007/s10209-017-0567-3
-  
-</div>
-
-<table>
-  <tr>
-    <td>
-	<button id="td11">
-    <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td11img" alt="some image"> </button>
-	</td>
-    <td>
-	<button id="td12">
-    <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td12" alt="some image"> </button>
-	</td>
-	 <td>
-	 <button id="td13">
-    <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td13" alt="some image"></button>
-	</td>
-  </tr>
-  
-  <tr>
-   <td>
-    <button id="td21">
-    <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td21" alt="some image"></button>
-	</td>
-    <td>
-	<button id="td22">
-    <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td22" alt="some image"></button>
-	</td>
-	 <td>
-	 <button id="td23">
-    <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td23" alt="some image"></button>
-	</td>
-   <tr> 
-   
-   
-   <td>
-   </td>
-      <td> 
-	    <button class="play-button"> Button Play Sound</button>
-	</td>
-	</td>
-    <td> <button class="submit-button"> Button Submit</button></td>
-	  </tr>
-</table> 
-
-
-<!-- &hellip; gives you ... -->
-<address> 
-
-<table cellpadding="10" align="center">
-<tr>
- <td>
- </td>
- <td><h4>
-  <SCRIPT LANGUAGE="JavaScript">
-   <!-- This script and many more are available free online at -->
-   <!-- The JavaScript Source!! http://javascript.internet.com -->
-   document.write("Updated: " + document.lastModified)
-  </SCRIPT></h4>
- </td>
- <td>
- </td>
-</tr>
-</table>
-
-</address>
-
-<script src="./page9script.js"></script>
-
-</body>
+   <head>
+      <title>Usability Testing</title>
+      <link rel="stylesheet" href="./ut.css">
+      <meta name="title" content="Usability Testing"/>
+      <meta name="Keywords" content=""/>
+      <meta name="Description" content=""/>
+   </head>
+   <body>
+      <!-- Site navigation menu -->
+      <ul class="navbar">
+         <li><a href="index.html">Home</a></li>
+      </ul>
+      <!-- Main content 
+         https://www.jotform.com/blog/how-to-add-captcha-to-google-forms/
+         -->
+      <div class="box">
+         Kuppusamy, K.S., Aghila, G. HuMan: an accessible, polymorphic and personalized CAPTCHA interface with preemption feature tailored for persons with visual impairments. Univ Access Inf Soc 17, 841–864 (2018). https://doi.org/10.1007/s10209-017-0567-3
+      </div>
+      <table>
+         <tr>
+            <td>
+               <button id="td11">
+               <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td11img" alt="some image"> </button>
+            </td>
+            <td>
+               <button id="td12">
+               <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td12" alt="some image"> </button>
+            </td>
+            <td>
+               <button id="td13">
+               <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td13" alt="some image"></button>
+            </td>
+         </tr>
+         <tr>
+            <td>
+               <button id="td21">
+               <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td21" alt="some image"></button>
+            </td>
+            <td>
+               <button id="td22">
+               <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td22" alt="some image"></button>
+            </td>
+            <td>
+               <button id="td23">
+               <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td23" alt="some image"></button>
+            </td>
+         <tr>
+            <td align ="left"> 
+               <button class="play-button"> Button Play Sound</button>
+            </td>
+            </td>
+            <td align ="left"> 
+               <button class="submit-button"> Button Submit</button>
+            </td>
+            <td>
+            </td>
+         </tr>
+      </table>
+      <!-- &hellip; gives you ... -->
+      <address>
+         <table cellpadding="10" align="center">
+            <tr>
+               <td>
+               </td>
+               <td>
+                  <h4>
+                     <SCRIPT LANGUAGE="JavaScript">
+                        <!-- This script and many more are available free online at -->
+                        <!-- The JavaScript Source!! http://javascript.internet.com -->
+                        document.write("Updated: " + document.lastModified)
+                     </SCRIPT>
+                  </h4>
+               </td>
+               <td>
+               </td>
+            </tr>
+         </table>
+      </address>
+      <script src="./page9script.js"></script>
+   </body>
 </html>
-
