--- a/page9.html
+++ b/page9.html
@@ -21,30 +21,30 @@
       <table>
          <tr>
             <td>
-               <button class="td11">
+               <button class="td11-button">
                <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td11img" alt="some image"> </button>
 			   
             </td>
             <td>
-               <button class="td12">
+               <button class="td12-button">
                <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td12" alt="some image"> </button>
             </td>
             <td>
-               <button class="td13">
+               <button class="td13-button">
                <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td13" alt="some image"></button>
             </td>
          </tr>
          <tr>
             <td>
-               <button class="td21">
+               <button class="td21-button">
                <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td21" alt="some image"></button>
             </td>
             <td>
-               <button class="td22">
+               <button class="td22-button">
                <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td22" alt="some image"></button>
             </td>
             <td>
-               <button class=="td23">
+               <button class=="td23-button">
                <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td23" alt="some image"></button>
             </td>
          <tr>
