--- a/page9.html
+++ b/page9.html
@@ -44,7 +44,7 @@
                <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td22" alt="some image"></button>
             </td>
             <td>
-               <button class=="td23-button">
+               <button class="td23-button">
                <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td23" alt="some image"></button>
             </td>
          <tr>
