--- a/page2.html
+++ b/page2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
-<html>
+<html lang="en">
 <head>
   <title>Usability Testing</title>
   <link rel="stylesheet" href="./ut.css">
