--- a/page1.html
+++ b/page1.html
@@ -1,108 +1,103 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html lang="en">
+
 <head>
-  <title>Usability Testing</title>
-  <link rel="stylesheet" href="./ut.css">
-  <meta name="title" content="Usability Testing"/>
-  <meta name="Keywords" content=""/>
-  <meta name="Description" content=""/>
+    <title>Usability Testing</title>
+    <link rel="stylesheet" href="./ut.css">
+    <meta name="title" content="Usability Testing" />
+    <meta name="Keywords" content="" />
+    <meta name="Description" content="" />
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
+    <script LANGUAGE="JavaScript">
+
+        function onSuccessReCaptcha(response) {
+            alert('Confirming we are in here in Success!');
+            const data = { secret: '6LfGu4QkAAAAABGWbNHGy5VabI04KsVR_bZjnyYG', response };
+            fetch('https://www.google.com/recaptcha/api/siteverify', {
+			    mode: 'cors',
+                method: 'POST',
+				headers: {
+				    'Content-Type': 'application/json', 
+					'Origin': '*'
+				},
+                body: JSON.stringify(data)
+            }).then((response) => {
+                console.log(response);
+            }).catch((error) => {
+                console.log(error);
+            });
+            ;
+        }
+
+        function onExpiredReCaptcha(event) {
+            alert('Confirming we are in here in Expired!');
+        }
+
+        function onErrorReCaptcha(event) {
+            alert('Confirming we are in here in Error!');
+        }
+
+    </script>
+
 </head>
 
 
 <body>
 
-<!-- Site navigation menu -->
-<ul class="navbar">
+    <!-- Site navigation menu -->
+    <ul class="navbar">
 
-  <li><img src="./ut.jpg" width="120" height="140" alt="UT"></li> 
-  <li><a href="index.html">Home</a></li>
-  <li><a href="page1.html" target="_blank">Page1</a></li> 
-  <li><a href="page2.html" target="_blank">Page2</a></li> 
-  <li><a href="page3.html" target="_blank">Page3</a></li> 
-  <li><a href="page4.html" target="_blank">Page4</a></li> 
-  <li><a href="page5.html" target="_blank">Page5</a></li> 
-  <li><a href="page6.html" target="_blank">Page6</a></li> 
-  <li><a href="page7.html" target="_blank">Page7</a></li> 
-  <li><a href="page8.html" target="_blank">Page8</a></li> 
-  <li><a href="page9.html" target="_blank">Page9</a></li> 
-  <li><a href="page10.html" target="_blank">Page10</a></li> 
-</ul>
+        <li><img src="./ut.jpg" width="120" height="140" alt="UT"></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="page1.html" target="_blank">Page1</a></li>
+        <li><a href="page2.html" target="_blank">Page2</a></li>
+        <li><a href="page3.html" target="_blank">Page3</a></li>
+        <li><a href="page4.html" target="_blank">Page4</a></li>
+        <li><a href="page5.html" target="_blank">Page5</a></li>
+        <li><a href="page6.html" target="_blank">Page6</a></li>
+        <li><a href="page7.html" target="_blank">Page7</a></li>
+        <li><a href="page8.html" target="_blank">Page8</a></li>
+        <li><a href="page9.html" target="_blank">Page9</a></li>
+        <li><a href="page10.html" target="_blank">Page10</a></li>
+    </ul>
 
+    <!-- Main content -->
+    <!-- https://developers.google.com/recaptcha/docs/display-->
+    <div class="box">
 
+        reCAPTCHA v2
+        "I'm not a robot" tickbox
 
+    </div>
 
-
-<!-- Main content -->
-<!-- https://developers.google.com/recaptcha/docs/display-->
-<div class="box">
-
-reCAPTCHA v2
-"I'm not a robot" tickbox
-
-  
-</div>
-
-<html>
-  <head>
-    <title>reCAPTCHA demo: Simple page</title>
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-  </head>
-  <body>
     <!-- <form action="https://schmeelk.github.io/usabilitytesting/page1.html" method="GET"> -->
-      <div class="g-recaptcha" data-sitekey="6LfGu4QkAAAAABGWbNHGy5VabI04KsVR_bZjnyYG" data-callback="onSuccessReCaptcha" data-expired-callback="onExipredReCaptcha" data-error-callback="onErrorReCaptcha" ></div>
-      <br/>
-      <!-- <input type="submit" value="Submit"> -->
+    <div class="g-recaptcha" data-sitekey="6LfGu4QkAAAAABGWbNHGy5VabI04KsVR_bZjnyYG" data-callback="onSuccessReCaptcha"
+        data-expired-callback="onExipredReCaptcha" data-error-callback="onErrorReCaptcha"></div>
+    <br />
+    <!-- <input type="submit" value="Submit"> -->
     <!-- </form> -->
-  </body>
-</html>
 
+    <!-- &hellip; gives you ... -->
+    <address>
 
+        <table cellpadding="10" align="center">
+            <tr>
+                <td>
+                </td>
+                <td>
+                    <h4>
+                        <SCRIPT LANGUAGE="JavaScript">
+                            document.write("Updated: " + document.lastModified)
+                        </SCRIPT>
+                    </h4>
+                </td>
+                <td>
+                </td>
+            </tr>
+        </table>
 
-
-<!-- &hellip; gives you ... -->
-<address> 
-
-<table cellpadding="10" align="center">
-<tr>
- <td>
- </td>
- <td><h4>
-  <SCRIPT LANGUAGE="JavaScript">
-   <!-- This script and many more are available free online at -->
-   <!-- The JavaScript Source!! http://javascript.internet.com -->
-   document.write("Updated: " + document.lastModified)
-  </SCRIPT></h4>
- </td>
- <td>
- </td>
-</tr>
-</table>
-
-</address>
-
-<script LANGUAGE="JavaScript"> 
-
-function onSuccessReCaptcha(response){
-  alert('Confirming we are in here in Success!');
-  const data = {secret: '6LfGu4QkAAAAABGWbNHGy5VabI04KsVR_bZjnyYG', response};
-  fetch('https://www.google.com/recaptcha/api/siteverify', {
-	method:'POST', 
-	body: JSON.stringify(data)
-  }).then(()=>{
-  alert('Successful response from google!!')});
-  ; 
-}
-
-function onExpiredReCaptcha(event){
-  alert('Confirming we are in here in Expired!');
-}
-
-function onErrorReCaptcha(event){
-  alert('Confirming we are in here in Error!');
-}
-
-</script>
-
+    </address>
 </body>
-</html>
 
+</html>
