--- a/page4.html
+++ b/page4.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
-<html>
+<html lang="en">
 <head>
-  <title>Usability Testing</title>
+  <title>Usability Testing</title>  
   <link rel="stylesheet" href="./ut.css">
   <meta name="title" content="Usability Testing"/>
   <meta name="Keywords" content=""/>
   <meta name="Description" content=""/>
+  
 </head>
 
 
@@ -13,19 +14,6 @@
 
 <!-- Site navigation menu -->
 <ul class="navbar">
-
-  <li><img src="./ut.jpg" width="120" height="140" alt="UT"></li> 
-  <li><a href="index.html">Home</a></li>
-  <li><a href="page1.html" target="_blank">Page1</a></li> 
-  <li><a href="page2.html" target="_blank">Page2</a></li> 
-  <li><a href="page3.html" target="_blank">Page3</a></li> 
-  <li><a href="page4.html" target="_blank">Page4</a></li> 
-  <li><a href="page5.html" target="_blank">Page5</a></li> 
-  <li><a href="page6.html" target="_blank">Page6</a></li> 
-  <li><a href="page7.html" target="_blank">Page7</a></li> 
-  <li><a href="page8.html" target="_blank">Page8</a></li> 
-  <li><a href="page9.html" target="_blank">Page9</a></li> 
-  <li><a href="page10.html" target="_blank">Page10</a></li> 
 </ul>
 
 
@@ -33,41 +21,70 @@
 
 
 <!-- Main content 
-https://developers.google.com/recaptcha/docs/v3
+https://www.jotform.com/blog/how-to-add-captcha-to-google-forms/
 -->
 <div class="box">
 
-reCAPTCHA v3
+Jonathan Holman, Jonathan Lazar, Jinjuan Heidi Feng, and John D'Arcy. 2007. Developing usable CAPTCHAs for blind users. In Proceedings of the 9th international ACM SIGACCESS conference on Computers and accessibility (Assets '07). Association for Computing Machinery, New York, NY, USA, 245–246. DOI:https://doi.org/10.1145/1296843.1296894
+
+
+<br><br>
+
+Jonathan Lazar, Jinjuan Feng, Tim Brooks, Genna Melamed, Brian Wentz, Jon Holman, Abiodun Olalere, and Nnanna Ekedebe. 2012. The SoundsRight CAPTCHA: an improved approach to audio human interaction proofs for blind users. In Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI '12). Association for Computing Machinery, New York, NY, USA, 2267–2276. DOI:https://doi.org/10.1145/2207676.2208385
+
+<br><br>
+
+Graig Sauer and Harry Hochheiser and Jinjuan Feng and Jonathan Lazar, (2008) Towards a universally usable captcha}, In Proc. of the 4th Symp. On Usable Privacy and Security (SOUPS ’08).
+
+<br><br>
+
+Graig Sauer, Jonathan Lazar, Harry Hochheiser, and Jinjuan Feng. 2010. Towards A Universally Usable Human Interaction Proof: Evaluation of Task Completion Strategies. ACM Trans. Access. Comput. 2, 4, Article 15 (June 2010), 32 pages. DOI:https://doi.org/10.1145/1786774.1786776
 
   
 </div>
 
-<html>
-  <head>
-     <script src="https://www.google.com/recaptcha/api.js"></script>
-  </head>
-  
-    <body>
+<!--Images: GitHub\usabilitytesting\media\captcha-images\public-domain-www.publicdomainpictures.net\
+Sounds: GitHub\usabilitytesting\media\captcha-sounds\
+
+
+Figure 1:
+
+Table:-->
+
+<table>
+  <tr>
+    <td>
+    <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="myPicture" alt="some image">
+	</td>
+    <td> 
+	    <button class="play-button"> Button Play Sound</button>
+	</td>
+  </tr>
+  <tr>
+    <td>
+		<select id = "choiceList">  
+		<option> bird </option>  
+		<option> cat </option>  
+		<option> fireworks </option>  
+		<option> dog </option>  
+		</select>  
 	
-	
-	 <script>
-       function onSubmit(token) {
-        document.getElementById("demo-form").submit();
-      }
-    </script>
+	</td>
+    <td> <button class="submit-button"> Button Submit</button></td>
+  </tr>
+</table> 
 
-    <form id="demo-form" action="?" method="POST">
-
-	<button class="g-recaptcha" 
-        data-sitekey="6LdNF4UkAAAAAAmwGg6_qVT-6f7V081LyVDAZ_FU" 
-        data-callback='onSubmit' 
-        data-action='submit'>Submit</button>
-
-    </form>
+<!--
+Javascript
+1.	Select image at random from set
+2.	Ensure image file name on list
+3.	Button Play: play sound file with matching image file name when clicked
+4.	Button Submit: validate selected dropdown list name matches sound file name
 
 
-    <body>
-</html>
+Figure 2:
+-->
+
 
 
 
@@ -83,7 +100,9 @@ reCAPTCHA v3
    <!-- This script and many more are available free online at -->
    <!-- The JavaScript Source!! http://javascript.internet.com -->
    document.write("Updated: " + document.lastModified)
-  </SCRIPT></h4>
+  </SCRIPT>
+  </h4>
+  <a href="#"> <button class="export-csv"> Export CSV</button> </a>
  </td>
  <td>
  </td>
@@ -91,6 +110,20 @@ reCAPTCHA v3
 </table>
 
 </address>
+
+<script src="./page4script.js"></script>
+
+ <!--<script src="/__/firebase/5.5.7/firebase-app.js"></script>
+ <script src="/__/firebase/5.5.7/firebase-auth.js"></script>
+ <script src="/__/firebase/5.5.7/firebase-database.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+    https://firebase.google.com/docs/web/setup#reserved-urls -->
+
+    <!-- Initialize Firebase -->
+<!-- <script src="/__/firebase/init.js"></script>
+-->	
+
 </body>
 </html>
 
