--- a/page5.html
+++ b/page5.html
@@ -1,73 +1,84 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
-<html>
-<head>
-  <title>Usability Testing</title>
-  <link rel="stylesheet" href="./ut.css">
-  <meta name="title" content="Usability Testing"/>
-  <meta name="Keywords" content=""/>
-  <meta name="Description" content=""/>
-</head>
-
-
-<body>
-
-<!-- Site navigation menu -->
-<ul class="navbar">
-
-  <li><img src="./ut.jpg" width="120" height="140" alt="UT"></li> 
-  <li><a href="index.html">Home</a></li>
-  <li><a href="page1.html" target="_blank">Page1</a></li> 
-  <li><a href="page2.html" target="_blank">Page2</a></li> 
-  <li><a href="page3.html" target="_blank">Page3</a></li> 
-  <li><a href="page4.html" target="_blank">Page4</a></li> 
-  <li><a href="page5.html" target="_blank">Page5</a></li> 
-  <li><a href="page6.html" target="_blank">Page6</a></li> 
-  <li><a href="page7.html" target="_blank">Page7</a></li> 
-  <li><a href="page8.html" target="_blank">Page8</a></li> 
-  <li><a href="page9.html" target="_blank">Page9</a></li> 
-  <li><a href="page10.html" target="_blank">Page10</a></li> 
-</ul>
-
-
-
-
-
-<!-- Main content 
-https://www.jotform.com/blog/how-to-add-captcha-to-google-forms/
--->
-<div class="box">
-
-Google Form with Math Equation to vet any audio settings
-
-<a href="https://docs.google.com/forms/d/e/1FAIpQLServieJ0BEMO5HrH16PhJffqQkMwoMiFRIrBze2KPintaw9hg/viewform?usp=sf_link" target="_blank">Link to Google Form</a>
-
-
-  
-</div>
-
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLServieJ0BEMO5HrH16PhJffqQkMwoMiFRIrBze2KPintaw9hg/viewform?embedded=true" width="640" height="462" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-
-
-<!-- &hellip; gives you ... -->
-<address> 
-
-<table cellpadding="10" align="center">
-<tr>
- <td>
- </td>
- <td><h4>
-  <SCRIPT LANGUAGE="JavaScript">
-   <!-- This script and many more are available free online at -->
-   <!-- The JavaScript Source!! http://javascript.internet.com -->
-   document.write("Updated: " + document.lastModified)
-  </SCRIPT></h4>
- </td>
- <td>
- </td>
-</tr>
-</table>
-
-</address>
-</body>
+<html lang="en">
+   <head>
+      <title>Usability Testing</title>
+      <link rel="stylesheet" href="./ut.css">
+      <meta name="title" content="Usability Testing"/>
+      <meta name="Keywords" content=""/>
+      <meta name="Description" content=""/>
+   </head>
+   <body>
+      <!-- Site navigation menu -->
+      <ul class="navbar">
+      </ul>
+      <!-- Main content 
+         https://www.jotform.com/blog/how-to-add-captcha-to-google-forms/
+         -->
+      <div class="box">
+         Kuppusamy, K.S., Aghila, G. HuMan: an accessible, polymorphic and personalized CAPTCHA interface with preemption feature tailored for persons with visual impairments. Univ Access Inf Soc 17, 841–864 (2018). https://doi.org/10.1007/s10209-017-0567-3
+      </div>
+      <table>
+         <tr>
+            <td>
+               <button class="td11-button">
+               <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td11img" alt="some image"> </button>
+			   
+            </td>
+            <td>
+               <button class="td12-button">
+               <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td12" alt="some image"> </button>
+            </td>
+            <td>
+               <button class="td13-button">
+               <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td13" alt="some image"></button>
+            </td>
+         </tr>
+         <tr>
+            <td>
+               <button class="td21-button">
+               <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td21" alt="some image"></button>
+            </td>
+            <td>
+               <button class="td22-button">
+               <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td22" alt="some image"></button>
+            </td>
+            <td>
+               <button class="td23-button">
+               <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="td23" alt="some image"></button>
+            </td>
+         <tr>
+            <td align ="left"> 
+               <button class="play-button"> Button Play Sound</button>
+            </td>
+            </td>
+            <td align ="left"> 
+               <button class="submit-button"> Button Submit</button>
+            </td>
+            <td>
+            </td>
+         </tr>
+      </table>
+      <!-- &hellip; gives you ... -->
+      <address>
+         <table cellpadding="10" align="center">
+            <tr>
+               <td>
+               </td>
+               <td>
+                  <h4>
+                     <SCRIPT LANGUAGE="JavaScript">
+                        <!-- This script and many more are available free online at -->
+                        <!-- The JavaScript Source!! http://javascript.internet.com -->
+                        document.write("Updated: " + document.lastModified)
+                     </SCRIPT>
+                  </h4>
+				  <a href="#"> <button class="export-csv"> Export CSV</button> </a>
+               </td>
+               <td>
+               </td>
+            </tr>
+         </table>
+      </address>
+      <script src="./page5script.js"></script>
+   </body>
 </html>
-
