--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 <!-- Site navigation menu -->
 <ul class="navbar">
 
+  <li><a href="index.html">Home</a></li>
+  <li><a href="page1.html" target="_blank">Page1</a></li> 
+  <li><a href="page2.html" target="_blank">Page2</a></li> 
+  <li><a href="page3.html" target="_blank">Page3</a></li> 
+  <li><a href="page4.html" target="_blank">Page4</a></li> 
+  <li><a href="page5.html" target="_blank">Page5</a></li> 
 </ul>
 
 
