--- a/page1.html
+++ b/page1.html
@@ -47,7 +47,7 @@
 
     <!-- Site navigation menu -->
     <ul class="navbar">
-   
+     <li><a href="index.html">Home</a></li>
     </ul>
 
     <!-- Main content -->
