--- a/page5.html
+++ b/page5.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
   <title>Usability Testing</title>  
-  <meta name="description" content="This is the description of my website" />
   <link rel="stylesheet" href="./ut.css">
   <meta name="title" content="Usability Testing"/>
   <meta name="Keywords" content=""/>
-  <meta name="Description" content=""/>
+  <meta name="Description" content="This is the description of my website."/>
   
 </head>
 
