--- a/page4.html
+++ b/page4.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
-<html lang="en">
+<html>
 <head>
-  <title>Usability Testing</title>  
+  <title>Usability Testing</title>
   <link rel="stylesheet" href="./ut.css">
   <meta name="title" content="Usability Testing"/>
   <meta name="Keywords" content=""/>
   <meta name="Description" content=""/>
-  
 </head>
 
 
@@ -26,67 +25,15 @@ https://www.jotform.com/blog/how-to-add-captcha-to-google-forms/
 -->
 <div class="box">
 
-Jonathan Holman, Jonathan Lazar, Jinjuan Heidi Feng, and John D'Arcy. 2007. Developing usable CAPTCHAs for blind users. In Proceedings of the 9th international ACM SIGACCESS conference on Computers and accessibility (Assets '07). Association for Computing Machinery, New York, NY, USA, 245–246. DOI:https://doi.org/10.1145/1296843.1296894
+Google Form with Math Equation to vet any audio settings
 
+<a href="https://docs.google.com/forms/d/e/1FAIpQLServieJ0BEMO5HrH16PhJffqQkMwoMiFRIrBze2KPintaw9hg/viewform?usp=sf_link" target="_blank">Link to Google Form</a>
 
-<br><br>
-
-Jonathan Lazar, Jinjuan Feng, Tim Brooks, Genna Melamed, Brian Wentz, Jon Holman, Abiodun Olalere, and Nnanna Ekedebe. 2012. The SoundsRight CAPTCHA: an improved approach to audio human interaction proofs for blind users. In Proceedings of the SIGCHI Conference on Human Factors in Computing Systems (CHI '12). Association for Computing Machinery, New York, NY, USA, 2267–2276. DOI:https://doi.org/10.1145/2207676.2208385
-
-<br><br>
-
-Graig Sauer and Harry Hochheiser and Jinjuan Feng and Jonathan Lazar, (2008) Towards a universally usable captcha}, In Proc. of the 4th Symp. On Usable Privacy and Security (SOUPS ’08).
-
-<br><br>
-
-Graig Sauer, Jonathan Lazar, Harry Hochheiser, and Jinjuan Feng. 2010. Towards A Universally Usable Human Interaction Proof: Evaluation of Task Completion Strategies. ACM Trans. Access. Comput. 2, 4, Article 15 (June 2010), 32 pages. DOI:https://doi.org/10.1145/1786774.1786776
 
   
 </div>
 
-<!--Images: GitHub\usabilitytesting\media\captcha-images\public-domain-www.publicdomainpictures.net\
-Sounds: GitHub\usabilitytesting\media\captcha-sounds\
-
-
-Figure 1:
-
-Table:-->
-
-<table>
-  <tr>
-    <td>
-    <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="myPicture" alt="some image">
-	</td>
-    <td> 
-	    <button class="play-button"> Button Play Sound</button>
-	</td>
-  </tr>
-  <tr>
-    <td>
-		<select id = "choiceList">  
-		<option> bird </option>  
-		<option> cat </option>  
-		<option> fireworks </option>  
-		<option> dog </option>  
-		</select>  
-	
-	</td>
-    <td> <button class="submit-button"> Button Submit</button></td>
-  </tr>
-</table> 
-
-<!--
-Javascript
-1.	Select image at random from set
-2.	Ensure image file name on list
-3.	Button Play: play sound file with matching image file name when clicked
-4.	Button Submit: validate selected dropdown list name matches sound file name
-
-
-Figure 2:
--->
-
-
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLServieJ0BEMO5HrH16PhJffqQkMwoMiFRIrBze2KPintaw9hg/viewform?embedded=true" width="640" height="462" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
 
 <!-- &hellip; gives you ... -->
@@ -101,9 +48,7 @@ Figure 2:
    <!-- This script and many more are available free online at -->
    <!-- The JavaScript Source!! http://javascript.internet.com -->
    document.write("Updated: " + document.lastModified)
-  </SCRIPT>
-  </h4>
-  <a href="#"> <button class="export-csv"> Export CSV</button> </a>
+  </SCRIPT></h4>
  </td>
  <td>
  </td>
@@ -111,20 +56,6 @@ Figure 2:
 </table>
 
 </address>
-
-<script src="./page4script.js"></script>
-
- <!--<script src="/__/firebase/5.5.7/firebase-app.js"></script>
- <script src="/__/firebase/5.5.7/firebase-auth.js"></script>
- <script src="/__/firebase/5.5.7/firebase-database.js"></script>
-
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-    https://firebase.google.com/docs/web/setup#reserved-urls -->
-
-    <!-- Initialize Firebase -->
-<!-- <script src="/__/firebase/init.js"></script>
--->	
-
 </body>
 </html>
 
