--- a/page7.html
+++ b/page7.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="./ut.css">
   <meta name="title" content="Usability Testing"/>
   <meta name="Keywords" content=""/>
-  <meta name="Description" content=""/>
+  <meta name="Description" content="This is the description of my website."/>
   
 </head>
 
@@ -26,6 +26,8 @@ https://www.jotform.com/blog/how-to-add-captcha-to-google-forms/
 -->
 <div class="box">
 
+
+
 Jonathan Holman, Jonathan Lazar, Jinjuan Heidi Feng, and John D'Arcy. 2007. Developing usable CAPTCHAs for blind users. In Proceedings of the 9th international ACM SIGACCESS conference on Computers and accessibility (Assets '07). Association for Computing Machinery, New York, NY, USA, 245–246. DOI:https://doi.org/10.1145/1296843.1296894
 
 
@@ -40,6 +42,7 @@ Graig Sauer and Harry Hochheiser and Jinjuan Feng and Jonathan Lazar, (2008) Tow
 <br><br>
 
 Graig Sauer, Jonathan Lazar, Harry Hochheiser, and Jinjuan Feng. 2010. Towards A Universally Usable Human Interaction Proof: Evaluation of Task Completion Strategies. ACM Trans. Access. Comput. 2, 4, Article 15 (June 2010), 32 pages. DOI:https://doi.org/10.1145/1786774.1786776
+
 
   
 </div>
@@ -112,7 +115,7 @@ Figure 2:
 
 </address>
 
-<script src="./page5script.js"></script>
+<script src="./page7script.js"></script>
 
  <!--<script src="/__/firebase/5.5.7/firebase-app.js"></script>
  <script src="/__/firebase/5.5.7/firebase-auth.js"></script>
