--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
   <li><a href="page3.html" target="_blank">Page3</a></li> 
   <li><a href="page4.html" target="_blank">Page4</a></li> 
   <li><a href="page5.html" target="_blank">Page5</a></li> 
+  <li><a href="page6.html" target="_blank">Page6</a></li> 
+  <li><a href="page7.html" target="_blank">Page7</a></li> 
 </ul>
 
 
