Update buttons and alt images
Update buttons and alt images

--- a/page8.html
+++ b/page8.html
@@ -57,7 +57,7 @@ Table:-->
 <table>
   <tr>
     <td>
-    <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="myPicture" alt="some image">
+    <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="myPicture">
 	</td>
     <td> 
 	   
@@ -66,7 +66,7 @@ Table:-->
   </tr>
   <tr>
     <td>
-          <button class="play-button"> Button Play Sound</button>
+          <button class="play-button"> Play Sound</button>
 		  
 		<div style="display:none">
 		<select id = "choiceList">  
@@ -78,7 +78,7 @@ Table:-->
 		</div>
 	
 	</td>
-    <td> <button class="submit-button"> Button Submit</button>
+    <td> <button class="submit-button"> Submit</button>
 	</td>
   </tr>
 </table> 
