--- a/page7.html
+++ b/page7.html
@@ -57,10 +57,10 @@ Table:-->
 <table>
   <tr>
     <td>
-    <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="myPicture" alt="some image">
+    <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="myPicture">
 	</td>
     <td> 
-	    <button class="play-button"> Button Play Sound</button>
+	    <button class="play-button"> Play Sound</button>
 	</td>
   </tr>
   <tr>
@@ -73,7 +73,7 @@ Table:-->
 		</select>  
 	
 	</td>
-    <td> <button class="submit-button"> Button Submit</button></td>
+    <td> <button class="submit-button"> Submit</button></td>
   </tr>
 </table> 
 
