--- a/page6.html
+++ b/page6.html
@@ -60,7 +60,7 @@ Table:-->
     <img src="./media/captcha-images/public-domain-www-publicdomainpictures-net/cat.jpg" width="200" height="200" id="myPicture">
 	</td>
     <td> 
-	    <button class="play-button"> Button Play Sound</button>
+	    <button class="play-button"> Play Sound</button>
 	</td>
   </tr>
   <tr>
@@ -73,7 +73,7 @@ Table:-->
 		</select>  
 	
 	</td>
-    <td> <button class="submit-button"> Button Submit</button></td>
+    <td> <button class="submit-button"> Submit</button></td>
   </tr>
 </table> 
 
