Update list of  sounds

--- a/page5.html
+++ b/page5.html
@@ -62,6 +62,7 @@ Table:-->
   </tr>
   <tr>
     <td>
+	    Please select from following sound list: bird, cat, fireworks, dog.
 		<select id = "choiceList">  
 		<option> bird </option>  
 		<option> cat </option>  
