--- a/page5.html
+++ b/page5.html
@@ -44,7 +44,7 @@ Graig Sauer, Jonathan Lazar, Harry Hochheiser, and Jinjuan Feng. 2010. Towards A
 -->
   
 
-/div>
+</div>
 
 <!--Images: GitHub\usabilitytesting\media\captcha-images\public-domain-www.publicdomainpictures.net\
 Sounds: GitHub\usabilitytesting\media\captcha-sounds\
