--- a/page5.html
+++ b/page5.html
@@ -25,6 +25,7 @@ https://www.jotform.com/blog/how-to-add-captcha-to-google-forms/
 -->
 
 <div class="box">
+Identify what the sound is to authenticate with system.
 
 <!--
 Jonathan Holman, Jonathan Lazar, Jinjuan Heidi Feng, and John D'Arcy. 2007. Developing usable CAPTCHAs for blind users. In Proceedings of the 9th international ACM SIGACCESS conference on Computers and accessibility (Assets '07). Association for Computing Machinery, New York, NY, USA, 245–246. DOI:https://doi.org/10.1145/1296843.1296894
@@ -65,7 +66,7 @@ Table:-->
   </tr>
   <tr>
     <td>
-	    Please select from following sound list: bird, cat, fireworks, dog.
+	    Please select from following sound list: <br>bird, cat, fireworks, dog.<br>
 		<select id = "choiceList">  
 		<option> bird </option>  
 		<option> cat </option>  
