--- a/page6.html
+++ b/page6.html
@@ -24,7 +24,7 @@
 https://www.jotform.com/blog/how-to-add-captcha-to-google-forms/
 -->
 <div class="box">
-
+Identify what the sound is to authenticate with system.
 
 <!--
 
@@ -91,29 +91,6 @@ Figure 2:
 
 
 
-
-<!-- &hellip; gives you ... -->
-<address> 
-
-<table cellpadding="10" align="center">
-<tr>
- <td>
- </td>
- <td><h4>
-  <SCRIPT LANGUAGE="JavaScript">
-   <!-- This script and many more are available free online at -->
-   <!-- The JavaScript Source!! http://javascript.internet.com -->
-   document.write("Updated: " + document.lastModified)
-  </SCRIPT>
-  </h4>
-  <a href="#"> <button class="export-csv"> Export CSV</button> </a>
- </td>
- <td>
- </td>
-</tr>
-</table>
-
-</address>
 
 <script src="./page6script.js"></script>
 
