--- a/page7.html
+++ b/page7.html
@@ -24,7 +24,7 @@
 https://www.jotform.com/blog/how-to-add-captcha-to-google-forms/
 -->
 <div class="box">
-
+Identify what the sound is to authenticate with system.
 <!--
 
 Jonathan Holman, Jonathan Lazar, Jinjuan Heidi Feng, and John D'Arcy. 2007. Developing usable CAPTCHAs for blind users. In Proceedings of the 9th international ACM SIGACCESS conference on Computers and accessibility (Assets '07). Association for Computing Machinery, New York, NY, USA, 245–246. DOI:https://doi.org/10.1145/1296843.1296894
@@ -90,29 +90,6 @@ Figure 2:
 
 
 
-
-<!-- &hellip; gives you ... -->
-<address> 
-
-<table cellpadding="10" align="center">
-<tr>
- <td>
- </td>
- <td><h4>
-  <SCRIPT LANGUAGE="JavaScript">
-   <!-- This script and many more are available free online at -->
-   <!-- The JavaScript Source!! http://javascript.internet.com -->
-   document.write("Updated: " + document.lastModified)
-  </SCRIPT>
-  </h4>
-  <a href="#"> <button class="export-csv"> Export CSV</button> </a>
- </td>
- <td>
- </td>
-</tr>
-</table>
-
-</address>
 
 <script src="./page7script.js"></script>
 
