--- a/page5.html
+++ b/page5.html
@@ -66,7 +66,7 @@ Table:-->
   </tr>
   <tr>
     <td>
-	    Please select from following sound list: <br>bird, cat, fireworks, dog.<br>
+	    Please select from <br>following sound list: <br>bird, cat, fireworks, dog.<br>
 		<select id = "choiceList">  
 		<option> bird </option>  
 		<option> cat </option>  
@@ -92,29 +92,6 @@ Figure 2:
 
 
 
-
-<!-- &hellip; gives you ... -->
-<address> 
-
-<table cellpadding="10" align="center">
-<tr>
- <td>
- </td>
- <td><h4>
-  <SCRIPT LANGUAGE="JavaScript">
-   <!-- This script and many more are available free online at -->
-   <!-- The JavaScript Source!! http://javascript.internet.com -->
-   document.write("Updated: " + document.lastModified)
-  </SCRIPT>
-  </h4>
-  <a href="#"> <button class="export-csv"> Export CSV</button> </a>
- </td>
- <td>
- </td>
-</tr>
-</table>
-
-</address>
 
 <script src="./page5script.js"></script>
 
