--- a/page1.html
+++ b/page1.html
@@ -64,7 +64,25 @@
     <!-- </form> -->
 
     <!-- &hellip; gives you ... -->
-   
+    <address>
+
+        <table cellpadding="10" align="center">
+            <tr>
+                <td>
+                </td>
+                <td>
+                    <h4>
+                        <SCRIPT LANGUAGE="JavaScript">
+                            document.write("Updated: " + document.lastModified)
+                        </SCRIPT>
+                    </h4>
+                </td>
+                <td>
+                </td>
+            </tr>
+        </table>
+
+    </address>
 </body>
 
 </html>
